style.css
/* ... */
*::-moz-selection {
	color: #fff;
	background: rgba(20,100,140,0.8);
}

*::selection {
	color: #fff;
	background: rgba(20,100,140,0.8);
}

.clear {
	clear: both;
}


strong {
	font-weight: bold;
}

em {
	font-style: italic;
}

.right {
	float: right;
}

.left {
	float: left;
}

#menuContainer {
}

.menuContainer {
	overflow: visible;
}

.menuContainer2 {
	overflow: visible;
}

#menu_container {
	transition: all 100ms ease-out;
	transform: translateZ(0);
	-webkit-transform: translateZ(0);
}

.menu_container {
	width: 400px;
	height: calc(100vh - 120px);
	background-color: rgba(251,247,243,1);
	padding: 30px;
	position: fixed;
	z-index: 50;
	color: #000;
	left: -400px;

	top: 60px;
	/*left: 400px; -- Set in javascript (100% of this div's width)*/
}

.menu_container2 {
	left: 60px !important;
}

.navMenu {
	list-style: none;
}


#navMenu a {
	color: #000;
	text-decoration: none;
}

#navMenu a:hover {
	color: grey;
}

.sub-menu {
	text-indent: 15px;
}

.header_section_width {
	width: calc(100% - 120px);
	height: 60px;
	margin: 0 auto;
	position: relative;
	padding: 15px 10px 15px 10px;
	/*border-right: 1px solid grey;
	border-left: 1px solid grey;*/
}

.frame_container {
	position: fixed;
	z-index: 100;
}

#header {
	width: 100%;
	height: 60px;
	top: 0;
	left: 0;
}

.header_gradient {
	width: 100%;
	height: 200%;
	position: absolute;
	top: 0px;

	transition: opacity 500ms ease;

	/* Gradient for the header */
	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,777777+100&0.2+0,0.15+33,0.05+71,0.05+71,0+100 */
	background: -moz-linear-gradient(top,  rgba(0,0,0,0.2) 0%, rgba(39,39,39,0.15) 33%, rgba(84,84,84,0.05) 71%, rgba(119,119,119,0) 100%); /* FF3.6-15 */
	background: -webkit-linear-gradient(top,  rgba(0,0,0,0.2) 0%,rgba(39,39,39,0.15) 33%,rgba(84,84,84,0.05) 71%,rgba(119,119,119,0) 100%); /* Chrome10-25,Safari5.1-6 */
	background: linear-gradient(to bottom,  rgba(0,0,0,0.2) 0%,rgba(39,39,39,0.15) 33%,rgba(84,84,84,0.05) 71%,rgba(119,119,119,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#33000000', endColorstr='#00777777',GradientType=0 ); /* IE6-9 */
}

.header_gradient_off {
	opacity: 0;
}

.frame {
	background-color: #fff;
	/*overflow: hidden;*/
	z-index: 10;

	transition: all 200ms ease-out;
}

.frame_topbot_hidden {
	width: 100%;
	height: 0%;
}

.frame_lefrig_hidden {
	width: 0%;
	height: 100%;
}

.header_fill_visible {
	height: 100%;
	width: 100%;
}

.align_pos_bottom {
	position: absolute;
	bottom: 0px;
}

.align_pos_right {
	position: absolute;
	right: 0px;
}

.align_pos_top {
	position: absolute;
	top: 0px;
}

/* White boxes to simluate a frame */
#left_box_margin,
#right_box_margin,
#bottom_box_margin {
	width: 60px;
	height: calc(100%);
}
#right_box_margin {right: 0; top: 0;}
#bottom_box_margin {bottom: 0; height: 60px; width: 100%; left: 0;}
#left_box_margin {left: 0; top: 0;}

#bottom_box_margin {
	text-align: center;
	color: #1f1f1f;
}

#toc_container {
	width: 100%;
	height: 50%;
	top: calc(25%);
	position: relative;
	/*background-color: lightblue;*/
}

#header_logo_container {
	float: left;
	height: 15px;
	width: 50%;
	margin-top: 7px;
	position: relative;
	background-size: contain;
	background-position: left;
	background-repeat: no-repeat;
}

#menuButton {
	width: 25px;
	height: 30px;
	/*border: 3px solid grey;*/
	cursor: pointer;
	top: calc(50% - 15px);
	margin: 0 auto;
	position: relative;
	display: none; /*Not yet ready!*/
}

.menuButton_lines {
	width: 100%;
	height: 2px;
	background-color: #000;
	border-radius: 1000px;
	margin: 0 auto;
	margin-top: 7px;
}

.menuButton_lines:first-of-type {
	margin-top: 0;
}

#header_social_container {
	float: right;
	position: relative;
	width: 50%;
	height: 100%;
}

.header_social {
	float: right;
	width: 17px;
	height: 17px;
	position: relative;
	margin-top: 8.5px;
	margin-left: 1rem;
	background-position: center;
	background-size: contain;
	background-repeat: no-repeat;
}

/* intro */
#intro_container {
	height: 100vh;
	position: relative;
	left: -60px;
	top: -60px;
}

#intro {
	height: 100%;
	width: 100%;
	overflow: hidden;
	position: fixed;
	top: 0;
}

.intro_dimmer {
	width: 100%;
	height: 100%;
	background-color: #000;
	pointer-events: none;
	opacity: .5;
	position: absolute;
}

.intro_dimmer {
	opacity: .8;
}

.intro_slideshow {
	width: 100%;
	height: 100%;
	position: absolute;
	background-size: cover;
	background-repeat: no-repeat;
	background-position: center;
	opacity: 0;
}

.intro_slideshow img {
	max-height: 100%;
	object-fit: cover;
	height: 100%;
}

#intro_txt {
	margin: 0 auto;
	position: relative;
	margin-top: calc(50vh - 60px);
	top: -30px;
	width: 100%;
	text-align: center;
}

#intro_txt h1, #intro_txt p {
	margin-top: 0;
	margin-bottom: 0;
	color: #fff;
	opacity: .85;
}

#intro_txt h1 {
	letter-spacing: 0.8rem;
	line-height: 1.4;
}

#introduksjons_helsing {
	text-transform: none;
	font-weight: 300;
	font-style: italic;
	letter-spacing: 3px;
	font-family: 'Libre Baskerville', serif;
	margin-bottom: 10px;
}

.intro_cta_wrapper {
	width: 400px;
	background: green;
	height: auto;
	margin: 0 auto;
}

.intro_cta {
	font-family: "proxima-nova" sans-serif;
	letter-spacing: 10;
	text-transform: uppercase;
	font-size: 70%;
	font-style: normal;
	display: block;
	padding-top: 1rem;
	opacity: .5 !important;
}

.separator {
	width: 2em;
	display: inline-block;
	text-align: center;
}





/* --------- Featured --------- */
.feature_container {
	width: calc(100vw - 120px);
	height: auto;
	margin: 0 auto;
	background: rgba(251,251,251,1); /*rgba(251,247,243,1)*/
	z-index: 10;
	position: relative;
	overflow: hidden;

}

#feature_container {
	transition: 3s all ease-out;
	transition: 0s top ease-out;
}

.display_feature {
	width: calc(100vw - 120px);
	height: calc(100vh - 120px);
	display: block;
	top: 0px;
	left: 0px;
	position: absolute;
}
/* ... */

